# Celestina

./: .gitignore  Celestina.code-workspace  README.md  ROADMAP.md
celestina-desktop/: CMakeLists.txt  PROJECT_CONTEXT.md  README.md  ROADMAP.md
celestina-desktop/qml/: Clock.qml  Panel.qml
celestina-desktop/src/: main.cpp
celestina-rs/: Cargo.toml  README.md  ROADMAP.md  rust-toolchain.toml
celestina-rs/crates/celestina-core/: Cargo.toml
celestina-rs/crates/celestina-core/src/: lib.rs
celestina-rs/crates/dotfiles-core/: Cargo.toml
celestina-rs/crates/dotfiles-core/src/: lib.rs
celestina-rs/crates/siderita-core/: Cargo.toml
celestina-rs/crates/siderita-core/src/: coordinator.rs  entry.rs  executor.rs  lib.rs  navigation.rs  scan.rs  view.rs  watch.rs
celestina-rs/crates/siderita-core/tests/: latest_scan.rs
celestina-rs/crates/siderita-ops/: Cargo.toml
celestina-rs/crates/siderita-ops/src/: copy.rs  create.rs  error.rs  lib.rs  name.rs  purge.rs  relocate.rs  rename.rs  restore.rs  trash.rs  trashinfo.rs
celestina-rs/crates/siderita-ops/tests/: operations.rs
celestina-rs/crates/siderita-qt/: Cargo.toml
celestina-rs/crates/siderita-qt/src/: lib.rs  view.rs
celestina-style/: .gitignore  CMakeLists.txt  CelestinaButton.qml  CelestinaContextMenu.qml  CelestinaGlassPanel.qml  CelestinaTheme.qml  GlassContextMenu.qml  GlassMenuItem.qml  GlassSurface.qml  PROJECT_CONTEXT.md  README.md  ROADMAP.md  icons.qrc  qmldir
magnetita/: README.md  ROADMAP.md
siderita-adma/: .gitignore  Cargo.toml  PROJECT_CONTEXT.md  README.md  ROADMAP.md  build.rs  siderita-adma.desktop
siderita-adma/cpp/: clipboard.cpp  entrymodel.cpp  icontheme.cpp  thumbnailprovider.cpp
siderita-adma/cpp/siderita/: clipboard.h  entrymodel.h  icontheme.h  thumbnailprovider.h
siderita-adma/docs/: ITERATION_1.md
siderita-adma/qml/i1/: CelestinaTheme.qml  GlassCard.qml  GlassContextMenu.qml  GlassMenuItem.qml  GlassSurface.qml  MainI1.qml  icons  icons.qrc
siderita-adma/scripts/: measure-i1.sh  run-i1.sh  stage-i1.sh
siderita-adma/src/: apps.rs  bookmarks.rs  controller.rs  dbus.rs  icons.rs  main.rs  places.rs  properties.rs  search.rs  settings.rs  volumes.rs
