[package]
name = "siderita-i1"
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
license = "GPL-3.0-or-later"
build = "build.rs"

[features]
default = []
qt-minimal = [
    "cxx-qt-build/link_qt_object_files",
    "dep:qt-build-utils",
    "dep:qt-version",
]

[dependencies]
cxx = "=1.0.176"
cxx-qt = "=0.9.1"
cxx-qt-lib = { version = "=0.9.1", default-features = false, features = [
    "qt_gui",
    "qt_qml",
    "qt_quickcontrols",
] }
celestina-core = { path = "../celestina-rs/crates/celestina-core" }
siderita-core = { path = "../celestina-rs/crates/siderita-core" }
siderita-ops = { path = "../celestina-rs/crates/siderita-ops" }
siderita-qt = { path = "../celestina-rs/crates/siderita-qt" }
# System-bus integration: org.freedesktop.FileManager1 and udisks2 volumes.
zbus = "5"

[build-dependencies]
cxx-qt-build = "=0.9.1"
cxx-gen = "=0.7.176"
qt-build-utils = { version = "=0.9.1", features = ["qt_minimal"], optional = true }
qt-version = { version = "=0.1.5", features = ["qt_version_at_least_6_10"], optional = true }

[profile.release]
codegen-units = 1
lto = "thin"
panic = "abort"
strip = "symbols"
